src/main/resources/Krakatau-master/tests/assembler/good/oddscpdouble2.j
###preprocess###
.class public oddscpdouble2
.super java/lang/Object

.method public static main : ([Ljava/lang/String;)V
    .code stack 10 locals 10
    	ldc2_w 5.5
    	return
    .end code
.end method

###range(1, 201, 2):.const [{}] = Utf8 ''
###
.const [r201] = Utf8 ''
###range(203, 65535, 2):.const [{}] = Utf8 ''
###
.end class