src/main/resources/Krakatau-master/tests/assembler/bad/evenscpdouble.j
###preprocess###
.class public oddscp
.super java/lang/Object

.method public static main : ([Ljava/lang/String;)V
    .code stack 10 locals 10
    	ldc2_w 5.5
    	return
    .end code
.end method

###range(2, 65535, 2):.const [{}] = Utf8 ''
###
.end class